# 42sh

./: README.md  configure.ac
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h
src/builtins/: Makefile.am  builtins.c  builtins.h
src/eval_ast/: Makefile.am  evaluate.c  evaluate.h
src/function/: Makefile.am  function.c  function.h
src/hash/: Makefile.am  hash.c  hash.h
src/lexer/: Makefile.am  lexer.c  lexer.h
src/parser/: Makefile.am  parser.h  parser1.c  parser2.c
tests/: 42-test.py  DEBUG  PARSER  TEST  test.c  test_echo.c  test_lexer.c  test_parser.c  testfile1.sh  testsuite.sh  tmp1.c
tests/echo/: test.sh  test14  test23  test24
tests/exit/: test.sh
